<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.datoUsuario.datoUsuarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nombres"
            android:textSize="15sp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/subs"
            android:gravity="center_vertical"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            tools:text="Hola que hace" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/apellidos"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtApellido"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/subs"
            android:gravity="center_vertical"
            android:paddingVertical="5dp"
            android:paddingStart="12dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            tools:text="Hola que hace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/direccion"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDireccione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Blanco"
                android:inputType="text"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="20sp"
                tools:ignore="SmallSp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/botones"
        android:text="@string/guardar"
        android:textAllCaps="false"
        android:textColor="@color/botones_texto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>