<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cuenta.detalleCuenta.nuevaTransac.nuevaTransFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="180dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/monto"
            android:textAllCaps="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"

android:background="@color/white"
            >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tMoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:text="$"
        android:textSize="20sp"
        android:background="@color/white"
        android:layout_marginStart="8dp"
        />
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="numberDecimal"
                android:textColor="@color/text"
                android:textSize="20sp"
                tools:ignore="SmallSp" />

</LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/creDeb"
            android:textColor="@color/card_deta_text_titulo"/>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/ckCreDeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            app:thumbTint="@color/Blanco"
            app:trackTint="@color/primary"
            app:useMaterialThemeColors="false"
            android:scaleX="2"
            android:scaleY="2"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/botones"
        android:text="@string/guardar"
        android:textColor="@color/botones_texto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>