<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginHorizontal="3dp"
    android:layout_marginVertical="18dp"
    android:background="@color/card_fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTipoC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:paddingStart="5dp"
                android:textColor="@color/card_color_text_titulo"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry"
                tools:text="Ahorro" />

            <ImageView
                android:id="@+id/icFav"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:contentDescription="@string/favoritas" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LSelec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNumbCuenta"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:textColor="@color/card_color_text_titulo"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry"
                tools:text="34234892341" />

            <TextView
                android:id="@+id/txtNombreComp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textColor="@color/card_texto_detalle"
                tools:ignore="RtlSymmetry"
                tools:text="Nombre completo del usuario" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end">

                <TextView
android:id="@+id/Monedas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:paddingStart="20dp"
                    android:text="@string/moneda"
                    android:textColor="@color/card_color_text_titulo"
                    android:textSize="25sp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txtSaldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:textColor="@color/card_color_text_titulo"

                    android:textSize="25sp"
                    tools:ignore="RtlSymmetry"
                    tools:text="Q 1,0000" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:paddingStart="20dp"
                android:textColor="@color/card_texto_detalle"
                android:text="@string/card_saldo_disponible"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/backGround" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>